2012-01-13 Pierre Wieser <pwieser@trychlos.org>

	* src/io-desktop/nadp-desktop-file.c:
	* src/io-desktop/nadp-desktop-file.h:
	NADP_DESKTOP_FILE_TYPE GType macro renamed as NADP_TYPE_DESKTOP_FILE.

	* src/io-desktop/nadp-desktop-provider.h:
	* src/api/na-extension.h:
	* src/io-desktop/nadp-module.c:
	NADP_DESKTOP_PROVIDER_TYPE GType macro renamed as NADP_TYPE_DESKTOP_PROVIDER.

	* src/io-desktop/nadp-monitor.c:
	* src/io-desktop/nadp-monitor.h:
	NADP_MONITOR_TYPE GType macro renamed as NADP_TYPE_MONITOR.

	* src/io-desktop/nadp-xdg-dirs.h: Fix documentation.

	* src/core/na-import-mode.c:
	* src/core/na-import-mode.h:
	NA_IMPORT_MODE_TYPE GType macro renamed as NA_TYPE_IMPORT_MODE.

	* src/core/na-importer-ask.c:
	* src/core/na-importer-ask.h:
	NA_IMPORTER_ASK_TYPE GType macro renamed as NA_TYPE_IMPORTER_ASK.

	* src/core/na-module.c:
	* src/core/na-module.h:
	* src/test/test-module.c:
	NA_MODULE_TYPE GType macro renamed as NA_TYPE_MODULE.

	* src/core/na-pivot.c:
	* src/core/na-pivot.h:
	NA_PIVOT_TYPE GType macro renamed as NA_TYPE_PIVOT.

	* src/core/na-selected-info.c:
	* src/core/na-selected-info.h:
	NA_SELECTED_INFO_TYPE GType macro renamed as NA_TYPE_SELECTED_INFO.

	* src/core/na-tokens.c:
	* src/core/na-tokens.h:
	NA_TOKENS_TYPE GType macro renamed as NA_TYPE_TOKENS.

	* src/core/na-updater.c:
	* src/core/na-updater.h:
	NA_UPDATER_TYPE GType macro renamed as NA_TYPE_UPDATER.

	* src/api/na-boxed.h:
	* src/core/na-boxed.c:
	NA_BOXED_TYPE GType macro renamed as NA_TYPE_BOXED.

	* src/api/na-data-boxed.h:
	* src/core/na-data-boxed.c:
	NA_DATA_BOXED_TYPE GType macro renamed as NA_TYPE_DATA_BOXED.

	* src/api/na-icontext.h:
	NA_ICONTEXT_TYPE GType macro renamed as NA_TYPE_ICONTEXT.

	* src/api/na-iduplicable.h:
	NA_IDUPLICABLE_TYPE GType macro renamed as NA_TYPE_IDUPLICABLE.

	* src/api/na-iexporter.h:
	* src/core/na-exporter.c:
	NA_IEXPORTER_TYPE GType macro renamed as NA_TYPE_IEXPORTER.

	* src/api/na-ifactory-object.h: