@@ -43,12 +43,12 @@
 
 G_BEGIN_DECLS
 
-#define NAXML_PROVIDER_TYPE                ( naxml_provider_get_type())
-#define NAXML_PROVIDER( object )           ( G_TYPE_CHECK_INSTANCE_CAST( object, NAXML_PROVIDER_TYPE, NAXMLProvider ))
-#define NAXML_PROVIDER_CLASS( klass )      ( G_TYPE_CHECK_CLASS_CAST( klass, NAXML_PROVIDER_TYPE, NAXMLProviderClass ))
-#define NA_IS_XML_PROVIDER( object )       ( G_TYPE_CHECK_INSTANCE_TYPE( object, NAXML_PROVIDER_TYPE ))
-#define NA_IS_XML_PROVIDER_CLASS( klass )  ( G_TYPE_CHECK_CLASS_TYPE(( klass ), NAXML_PROVIDER_TYPE ))
-#define NAXML_PROVIDER_GET_CLASS( object ) ( G_TYPE_INSTANCE_GET_CLASS(( object ), NAXML_PROVIDER_TYPE, NAXMLProviderClass ))
+#define NAXML_TYPE_PROVIDER                ( naxml_provider_get_type())
+#define NAXML_PROVIDER( object )           ( G_TYPE_CHECK_INSTANCE_CAST( object, NAXML_TYPE_PROVIDER, NAXMLProvider ))
+#define NAXML_PROVIDER_CLASS( klass )      ( G_TYPE_CHECK_CLASS_CAST( klass, NAXML_TYPE_PROVIDER, NAXMLProviderClass ))
+#define NA_IS_XML_PROVIDER( object )       ( G_TYPE_CHECK_INSTANCE_TYPE( object, NAXML_TYPE_PROVIDER ))
+#define NA_IS_XML_PROVIDER_CLASS( klass )  ( G_TYPE_CHECK_CLASS_TYPE(( klass ), NAXML_TYPE_PROVIDER ))
+#define NAXML_PROVIDER_GET_CLASS( object ) ( G_TYPE_INSTANCE_GET_CLASS(( object ), NAXML_TYPE_PROVIDER, NAXMLProviderClass ))
 
 typedef struct _NAXMLProviderPrivate       NAXMLProviderPrivate;
 
